<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HW3</string>
    <string name="thirdday">第三天作业</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="action_settings">Settings</string>
    <string name="todo">TODO</string>
    <string-array name="onelist">
        <item >aaa</item>
        <item >aaaa</item>
        <item >aa</item>
        <item >aaaa</item>
        <item >aaaaaaaaa</item>
    </string-array>
    <string name="name">姓名</string>
    <string name="sex">姓别</string>
    <string name="age">年龄</string>
    <string name="add">添加</string>
    <string name="del">删除</string>
    <string name="refresh">刷新</string>
    <string name="selall">全选</string>
    <string name="back">返回</string>
    <string name="third">第三题</string>

</resources>
