<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/lv21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#00B28C"
        android:orientation="horizontal" >


        <Button
            android:id="@+id/btnback"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back" 
            android:onClick="back3"/>

        <TextView
            android:id="@+id/tv3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="25sp"
            
            android:text="@string/third" />
        
        <Button
            android:id="@+id/btnadd3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add" 
            android:onClick="add3"/>

    </LinearLayout>

    <ListView
        android:id="@+id/lv3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lv21"
        android:layout_above="@+id/lv22"
        android:layout_centerHorizontal="true">
    </ListView>
    
    <LinearLayout
        android:id="@+id/lv22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btndel3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="#00B28C"
            android:text="@string/del" 
            android:onClick="del3"/>

        <Button
            android:id="@+id/btnselall3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00B28C"
            android:text="@string/selall" 
            android:onClick="selall3"/>
    </LinearLayout>


</RelativeLayout>